Ajustes gerais em páginas html e typescript do site

--- a/src/app/admnavbar/admnavbar.component.html
+++ b/src/app/admnavbar/admnavbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm">
+<nav class="navbar navbar-expand-sm fixed-top">
     <img class="logo" src="https://i.imgur.com/6WIAE8r.png" alt="Logo Livraria Abraço">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
         aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
@@ -17,7 +17,7 @@
                 <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/contatos'>CONTATOS</a>
+                <a class="nav-link" routerLink='/contatos'>CONTATO</a>
             </li>
         </ul>
 
