--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!--Carrossel-->
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide mt-5" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="https://i.imgur.com/lfu8aEn.jpg" alt="Primeiro Slide">
@@ -196,7 +196,7 @@
   <!--Botão Ver mais-->
   <div class="container">
     <div class="row d-flex justify-content-center">
-      <button type="button" class="btnVermais">Ver mais</button>
+      <button type="button" class="btnVermais" routerLink='/loja'>Ver mais</button>
     </div>
   </div>
   <!--/Botão Ver mais-->
