--- a/src/app/delete/categoria-delete/categoria-delete.component.html
+++ b/src/app/delete/categoria-delete/categoria-delete.component.html
@@ -1,6 +1,6 @@
 <div class="container mb-5 mt-5">
     <div class="row mb-5">
-        <div class="col-md-12">
+        <div class="col-md-12 mt-5">
             <h1 class="text-center text-black">Apagar Categoria</h1>
 
         </div>
