--- a/src/app/delete/produto-delete/produto-delete.component.html
+++ b/src/app/delete/produto-delete/produto-delete.component.html
@@ -1,28 +1,29 @@
 <div class="container mb-5 mt-5">
     <div class="row mb-5">
-        <div class="col-md-12">
+        <div class="col-md-12 mt-5">
             <h1 class="text-center text-black">Apagar Produto</h1>
 
         </div>
     </div>
-    <div class="row mb-3">
-        <div class="col-md-12">
-            <h4 class="text-center text-secondary">Tem certeza que deseja apagar este Protudo?</h4>
-        </div>
-    </div>
-
     <div class="row mb-4">
-        <div class="col-md-12">
-            <h5 class="text-center text-primary">Título: {{produto.nome}} </h5>
-            <h5 class="text-center text-primary">Autor: {{produto.autor}} </h5>
-            <h5 class="text-center text-primary">Preço: R$ {{produto.preco}} </h5>
-            <h5 class="text-center text-primary">Quantidade: {{produto.quantidade}} Unidades </h5>
-            <h5 class="text-center text-primary">Genêro: {{produto.categoria.genero}} </h5>
-            <h5 class="text-center text-primary">Assunto: {{produto.categoria.assunto}} </h5>           
+        <div class="col-md-12 d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{{produto.imagem}}" alt="Imagem de capa do card">
+                <div class="card-body">
+                    <p class="card-text">Título: {{produto.nome}}</p>
+                    <p class="card-text">Autor: {{produto.autor}} </p>
+                    <p class="card-text">Preço: R$ {{produto.preco}}</p>
+                    <p class="card-text">Quantidade: {{produto.quantidade}} Unidades </p>
+                    <p class="card-text">Genêro: {{produto.categoria.genero}} </p>
+                    <p class="card-text">Assunto: {{produto.categoria.assunto}}</p>
+                </div>
+            </div>
+
         </div>
     </div>
 
-    <div class="row">
+    <div class="row d-flex justify-content-center">
+        <h5 class="text-center mt-4 mb-4">Tem certeza que deseja apagar este Protudo?</h5>
         <div class="col-md-12 d-flex justify-content-center">
             <button class="btn btn-danger mr-4" routerLink='/produto'>Não</button>
             <button class="btn btn-success" (click)='apagar()'>Sim</button>
