--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5 mb-5">
     <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-center text-black">Atualizar Tema</h1>
+        <div class="col-md-12 mt-5">
+            <h1 class="text-center text-black">Atualizar Categoria</h1>
         </div>
     </div>
 
