--- a/src/app/edit/produto-edit/produto-edit.component.html
+++ b/src/app/edit/produto-edit/produto-edit.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 mb-5">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 mt-5">
             <h1 class="text-center text-black">Atualizar Produto</h1>
         </div>
     </div>
@@ -8,7 +8,7 @@
     <div class="row d-flex justify-content-center">
         <div class="col-md-6">
             <div class="form-group">
-                <label for="nome">titulo</label>
+                <label for="nome">Título</label>
                 <input type="text" class="form-control" id="nome" [(ngModel)]='produto.nome'>
 
                 <label for="autor">Autor</label>
@@ -17,21 +17,23 @@
                 <label for="preco">Preço</label>
                 <input type="number" class="form-control" id="preco" [(ngModel)]='produto.preco'>
 
-                <label for="quantidade">quantidade</label>
+                <label for="quantidade">Quantidade</label>
                 <input type="number" class="form-control" id="quantidade" [(ngModel)]='produto.quantidade'>
 
-                <!-- <select class="form-control mb-2" name="genero" id="dropGeneros" [(ngModel)] = 'idGenero' (change) = 'findByIdCategoria()'></select> -->
+                <label for="imagem">Imagem</label>
+                <input type="text" class="form-control" id="imagem" [(ngModel)]='produto.imagem'>
 
-                <label for="genero">Genêro</label>
-                <input type="text" class="form-control" id="genero" [(ngModel)]='produto.categoria.genero'>
+                <label for="genero">Assunto</label>
+                <select class="form-control mb-2" name="categoria" id="dropCategorias" placeholder="Selecione o Assunto" [(ngModel)]='idCategoria'
+                    (change)='findByIdCategoria()'>
+                    <option *ngFor='let item of listaCategorias' value="{{item.id}}">
+                        {{item.assunto}}
+                    </option>
+                </select>
 
-                <label for="assunto">Assunto</label>
-                <input type="text" class="form-control" id="assunto" [(ngModel)]='produto.categoria.assunto'>
-
-            
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-danger mr-4" routerLink='/produto' >Cancelar</button>
+                <button class="btn btn-danger mr-4" routerLink='/produto'>Cancelar</button>
                 <button class="btn btn-success" (click)='atualizar()'>Atualizar</button>
             </div>
         </div>
