--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-
-
 .html{
-
     scroll-behavior: smooth;
+}
+
+h2, h3, p, a{
+    font-family: 'Montserrat', sans-serif;
+    
 }
