Implementação de contato e atualização de sobre nós

--- a/src/app/categoria/categoria.component.html
+++ b/src/app/categoria/categoria.component.html
@@ -44,7 +44,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Gênero</th>
                     <th scope="col">Assunto</th>
-                    <th scope="col" class="text-right">Modificações</th>
+                    <th scope="col" class="text-center">Modificações</th>
                   </tr>
                 </thead>
                 <tbody>
