--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,266 +23,240 @@
 <!--/Carrossel-->
 
 <!--Jumbotron-->
-  <div class="container-fluid">
-    <a href="">
-      <div class="row jumbotron" style="height: 19vw;">
-        <div class="col-md-12 m-0 p-0">
-          <div class="jumbotronText">
-              <div class="col-7">
-                <h2>Apoie nossa causa!</h2>
-                <h3>A Livraria Abraço é um e-commerce que nasceu para atingir a ODS 4 da ONU e levar cultura e educação a
-                  pessoas carentes.</h3>
-                 
-              </div>               
-            </div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <!--/Jumbotron-->
-
-  <hr class="hrPontilhado">
-
-  <!--Produtos em destaque-->
-  <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">PRODUTOS EM ESTOQUE</h2>
-  </div>
-  <hr class="hrMenor">
-
-  <!--/Produtos em destaque-->
-
-
-  <!--Carousel de cards-->
-  <div class="container">
-
-    <!--Carousel Wrapper-->
-    <div id="multi-item-example" class="carousel slide carousel-multi-item " data-ride="carousel">
-
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <!--Slides-->
-        <div class="carousel-inner" role="listbox">
-
-          <!--First slide-->
-          <div class="carousel-item">
-
-            <div class="row d-flex justify-content-center">
-
-
-              <div class="col-md-3 ">
-                <div class="card mb-2 tamanhoCard">
-                  <img class="card-img-top" src="https://i.imgur.com/G80nmke.jpeg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2 tamanhoCard">
-                  <img class="card-img-top" src="https://i.imgur.com/lA4LIaH.jpg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2 tamanhoCard">
-                  <img class="card-img-top" src="https://i.imgur.com/BEgAAX6.jpeg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2 tamanhoCard">
-                  <img class="card-img-top" src="https://i.imgur.com/cH5C0Ar.jpg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
-                </div>
-              </div>
-            </div>
+<div class="container-fluid">
+  <a href="">
+    <div class="row jumbotron" style="height: 19vw;">
+      <div class="col-md-12 m-0 p-0">
+        <div class="jumbotronText">
+          <div class="col-7">
+            <h2>Apoie nossa causa!</h2>
+            <h3>A Livraria Abraço é um e-commerce que nasceu para atingir a ODS 4 da ONU e levar cultura e educação a
+              pessoas carentes.</h3>
 
           </div>
-          <!--/.First slide-->
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+<!--/Jumbotron-->
 
-          <!--First slide-->
-          <div class="carousel-item active ">
+<hr class="hrPontilhado">
 
-            <div class="row d-flex justify-content-center">
-              <div class="col-md-3">
-                <div class="card mb-2">
-                  <img class="card-img-top"
-                    src="https://i.imgur.com/jukEX5i.jpg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
-                </div>
-              </div>
+<!--Produtos em destaque-->
+<div class="md-col-12">
+  <h2 class="oQueFazemos text-center">PRODUTOS EM ESTOQUE</h2>
+</div>
+<hr class="hrMenor">
 
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2">
-                  <img class="card-img-top"
-                    src="https://i.imgur.com/BEgAAX6.jpeg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
-                  </div>
-                </div>
-              </div>
+<!--/Produtos em destaque-->
 
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2">
-                  <img class="card-img-top"
-                    src="https://i.imgur.com/kBprmIm.jpg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
-                </div>
-              </div>
 
-              <div class="col-md-3 clearfix d-none d-md-block">
-                <div class="card mb-2">
-                  <img class="card-img-top"
-                    src="https://i.imgur.com/0GBYZ5e.jpg" alt="Card image cap">
-                  <div class="corpo-card">
-                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
-                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
-                  </div>
+<!--Carousel de cards-->
+<div class="container">
+
+  <!--Carousel Wrapper-->
+  <div id="multi-item-example" class="carousel slide carousel-multi-item " data-ride="carousel">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <!--Slides-->
+      <div class="carousel-inner" role="listbox">
+
+        <!--First slide-->
+        <div class="carousel-item">
+
+          <div class="row d-flex justify-content-center">
+
+
+            <div class="col-md-3 ">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/G80nmke.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
                 </div>
               </div>
             </div>
 
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/lA4LIaH.jpg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/BEgAAX6.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/cH5C0Ar.jpg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
           </div>
-          <!--/.First slide-->
+
         </div>
-        <!--/.Slides-->
+        <!--/.First slide-->
 
+        <!--First slide-->
+        <div class="carousel-item active ">
+
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-3">
+              <div class="card mb-2">
+                <img class="card-img-top" src="https://i.imgur.com/jukEX5i.jpg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2">
+                <img class="card-img-top" src="https://i.imgur.com/BEgAAX6.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2">
+                <img class="card-img-top" src="https://i.imgur.com/kBprmIm.jpg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2">
+                <img class="card-img-top" src="https://i.imgur.com/0GBYZ5e.jpg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!--/.First slide-->
       </div>
+      <!--/.Slides-->
 
-      <!--Controls-->
-      <!-- <div class="d-flex justify-content-center topmargin-10">
+    </div>
+
+    <!--Controls-->
+    <!-- <div class="d-flex justify-content-center topmargin-10">
         <a class="button" href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"> < </i></a>
         <a class="button" href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"> > </i></a>
       </div> -->
-      <a class="carousel-control-prev botaoCardsPrev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next botaoCardsNext" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
-      <!--/.Controls-->
-    </div>
-    <!--/.Carousel Wrapper-->
+    <a class="carousel-control-prev botaoCardsPrev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next botaoCardsNext" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Próximo</span>
+    </a>
+    <!--/.Controls-->
+  </div>
+  <!--/.Carousel Wrapper-->
+</div>
+
+
+<!--/Carousel cards-->
+
+
+
+
+
+<!--Botão Ver mais-->
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <button type="button" class="btnVermais" routerLink='/loja'>Ver mais</button>
+  </div>
+</div>
+<!--/Botão Ver mais-->
+
+
+<hr class="hrPontilhado">
+
+<!--O que fazemos-->
+<div class="md-col-12">
+  <h2 class="oQueFazemos text-center">O QUE FAZEMOS</h2>
+</div>
+<hr class="hrMenor">
+
+<div class="container d-flex justify-content-between d-flex align-items-center">
+  <div class="col-md-6 margemFazemos ">
+    <p class="texto-esquerda"> Em códigos, queremos ajudar para que todos se sintam abraçados com a cultura e a
+      educação. Para isso, criamos a Livraria Abraço, um e-commerce para doar livros para quem mais precisa de cultura e
+      educação, integrando quem quer doar a quem receber por meio da Internet.
+    </p>
+  </div>
+  <div class="col-md-6">
+    <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="600px" height="550px">
   </div>
 
+</div>
+<!--/O que fazemos-->
 
-  <!--/Carousel cards-->
-
-
-
-
-
-  <!--Botão Ver mais-->
-  <div class="container">
-    <div class="row d-flex justify-content-center">
-      <button type="button" class="btnVermais" routerLink='/loja'>Ver mais</button>
-    </div>
-  </div>
-  <!--/Botão Ver mais-->
-
-
-  <hr class="hrPontilhado">
-
-  <!--O que fazemos-->
-  <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">O QUE FAZEMOS</h2>
-  </div>
-  <hr class="hrMenor">
-
-  <div class="container d-flex justify-content-between">
-    <div class="col-md-6 margemFazemos ">
-      <p class="texto-esquerda"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
-        laborum
-        facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
-        blanditiis? Aliquid, ea est.dfgdfgdfgggggggggggggggggggggggggggggggggggggggdforem ipsum dolor sit amet
-        consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
-        blanditiis? Aliquid, ea est.dfgdfgdfgggggggggggggggggggggggggggggggggggggggdf
-        orem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
-        blanditiis? Aliquid, ea est.dfgdfgdfgggggggggggggggggggggggggggggggggggggggdf
-        orem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
-        blanditiis? Aliquid, ea est.dfgdfgdfgggggggggggggggggggggggggggggggggggggggdf
-        orem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
+<!--Objetivos-->
+<div class="md-col-12">
+  <h2 class="oQueFazemos text-center">Objetivos</h2>
+</div>
+<hr class="hrMenor">
+<div class="container">
+  <div class="col-md-12 d-flex justify-content-between">
+    <div class="row">
+      <p>1. Ser referência: o melhor e-commerce de livros, consolidando-nos pela confiança e pela boa comunicação.
       </p>
     </div>
-    <div class="col-md-6">
-      <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="600px" height="550px">
-    </div>
-
-  </div>
-  <!--/O que fazemos-->
-
-  <!--Objetivos-->
-  <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">Objetivos</h2>
-  </div>
-  <hr class="hrMenor">
-  <div class="container">
-    <div class="col-md-12 d-flex justify-content-between">
-      <div class="row">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsum reiciendis autem ipsam, architecto
-          minus,
-          cupiditate saepe laudantium doloribus vero ratione ab ipsa sit ex cum animi, explicabo maxime soluta.
-        </p>
-      </div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsum reiciendis autem ipsam, architecto minus,
-        cupiditate saepe laudantium doloribus vero ratione ab ipsa sit ex cum animi, explicabo maxime soluta.
+    <p>2. Ser parceira: ser um ponto de contato entre diversas identidades.
+    </p>
+    <div class="row">
+      <p>3. Ser sustentável: Mantendo as melhores relações entre clientes, funcionários e parceiros
       </p>
-      <div class="row">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ipsum reiciendis autem ipsam, architecto
-          minus,
-          cupiditate saepe laudantium doloribus vero ratione ab ipsa sit ex cum animi, explicabo maxime soluta.
-        </p>
-      </div>
     </div>
   </div>
-  <!--/Objetivos-->
-  <hr class="hrPontilhado">
+</div>
+<!--/Objetivos-->
+<hr class="hrPontilhado">
 
-  <!--Nossos Parceiros-->
-  <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">Nossos Parceiros</h2>
+<!--Nossos Parceiros-->
+<div class="md-col-12">
+  <h2 class="oQueFazemos text-center">Nossos Parceiros</h2>
+</div>
+
+
+<div class="container d-flex align-items-center">
+  <div class="col-md-6 d-flex justify-content-center">
+    <img src="https://i.imgur.com/byTmZst.jpg" alt="" width="50%" height="50%">
   </div>
+  <div class="col-md-4 ">
+    <p class=""> A Livraria Abraço atua como amiga de diversas instituições conectadas com a educação e a cultura:
+      Generation Brasil e a ONU Brasil.
+    </p>
 
-
-  <div class="container d-flex align-items-center">
-    <div class="col-md-6 d-flex justify-content-center">
-      <img src="https://i.imgur.com/byTmZst.jpg" alt="" width="50%" height="50%">
-    </div>
-    <div class="col-md-4 ">
-      <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
-        laborum
-        facere dolore.
-        Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
-        blanditiis? Aliquid, ea est.dfgdfgdfgggggggggdforem ipsum dolor sit amet
-        consectetur adipisicing elit. Ipsum explicabo debitis laborum facere dolore.
-      </p>
-
-    </div>
   </div>
-  <!--/Nossos Parceiros-->
+</div>
+<!--/Nossos Parceiros-->
