--- a/src/app/loja/loja.component.html
+++ b/src/app/loja/loja.component.html
@@ -8,9 +8,11 @@
                 <div class="col-md-12">
                     <div class="sloganImg w-100">
                         <img src="https://i.imgur.com/pPJOvih.png" alt="" class="w-100" />
-                        <div class="sloganText">
-                            <h2>Um carinho no saber!</h2>
-                            <h3>Abrace uma criança, doe um lirvro.</h3>
+                        <div class="sloganText col-6">
+                            <h2>Um carinho para o saber</h2>
+                            <h4>Quando abraçamos o conhecimento, todos nós ganhamos. Seja quem receba o livro por ter
+                                mais chances de ter um futuro melhor, como você, pela felicidade de contribuir nesta
+                                jornada.</h4>
                         </div>
                     </div>
                 </div>
@@ -27,23 +29,23 @@
                 </ul>
             </div>
 
-                <div class="col-9 ml-5 mt-5">
-                    <div class="card cardProdutos text-center" *ngFor='let item of listaProdutos'>
-                        <div class="card-body">
-                            <a href=""><img src="{{item.imagem}}" alt="" class="imgLivro mt-4"/></a>
-                            <h5 class="card-title mt-2 text-left ml-2">{{item.nome}}</h5>
-                            <h6 class="card-title mt-2 text-left ml-2">{{item.autor}}</h6>
-                            <p class="card-text text-left ml-2">R$ {{item.preco}}</p>
-                        </div>
-                        <div class="card-footer mt-2">
-                            <a href="#" class="button mb-5">Comprar</a>
-                        </div>
+            <div class="col-9 ml-5 mt-5">
+                <div class="card cardProdutos text-center" *ngFor='let item of listaProdutos'>
+                    <div class="card-body">
+                        <a href=""><img src="{{item.imagem}}" alt="" class="imgLivro mt-4" /></a>
+                        <h5 class="card-title mt-2 text-left ml-2">{{item.nome}}</h5>
+                        <h6 class="card-title mt-2 text-left ml-2">{{item.autor}}</h6>
+                        <p class="card-text text-left ml-2">R$ {{item.preco}}</p>
                     </div>
-                </div>       
+                    <div class="card-footer mt-2">
+                        <a href="#" class="button mb-5">Comprar</a>
+                    </div>
+                </div>
             </div>
-           
-            <!--/Produtos-->
+        </div>
+
+        <!--/Produtos-->
 
     </body>
 </div>
-    <!--/Body-->
+<!--/Body-->
