--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" routerLink='/sobre-nos'>SOBRE NÓS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink='/contatos'>CONTATO</a>
+                <a class="nav-link" routerLink='/contato'>CONTATO</a>
             </li>
         </ul>
 
