--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -59,9 +59,9 @@
                         <th scope="col">Autor</th>
                         <th scope="col">Preço</th>
                         <th scope="col">Quantidade</th>
-                        <th scope="col">Genêro</th>
+                        <th scope="col">Gênero</th>
                         <th scope="col">Assunto</th>
-                        <th scope="col" class="text-right">Modificações</th>
+                        <th scope="col" class="text-center">Modificações</th>
                     </tr>
                 </thead>
                 <tbody>
