--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,7 +10,7 @@
     position: absolute;
     color: #3D3D3D;
     text-align: justify;
-    top: 10%;
+    top: 5%;
     left: 20%;
 }
 
@@ -18,18 +18,26 @@
     font-size: 3.5vw;   
 }
 
-.jumbotronText h2:hover{
-    color: #f2b035;
-        
+ .jumbotron:hover {
+    background-image: url(https://i.imgur.com/kdzMWnv.png);       
 }
 
-.jumbotronText h3 {
+.jumbotronText h3  {
     font-size: 1.5vw;
 }
 
-.jumbotron:hover {
-    color: #f2b035;
-    background-image: url(https://i.imgur.com/kdzMWnv.png);    
+.jumbotron:hover .jumbotronText h2{  
+    color: #f2b035; 
+}
+
+.hrDegrade{
+    height: 2px;
+    width: 70%;
+    background: -webkit-gradient(linear, 5 5, 100% 0%, from(white), to(white), color-stop(50%, #F2B035));
+}
+
+.tamanhoCard{
+    width: 250px;
 }
 
 .botaoCardsPrev{
@@ -61,17 +69,6 @@
     color: white;
 }
 
-.hrPontilhado{
-    border:  2px dashed #C1DFF2;
-    width: 70%;
-}
-
-.hrMenor{
-    background-color: black;
-    height: 1px;
-    width: 45%;
-    opacity: 30%;
-}
 
 .h2OqueFazemos{
     color: #65ACD8;
@@ -103,6 +100,3 @@
     background-size: 50%;
 }
 
-.tamanhoCard{
-    width: 250px;
-}
