Implementação de Página de Produto e correção de rotas na página home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,7 +31,7 @@
 
 <!--Jumbotron-->
 <div class="container-fluid">
-  <a href="">
+  <a routerLink='/contato'>
     <div class="row jumbotron" style="height: 19vw;">
       <div class="col-12 m-0 p-0">
         <div class="jumbotronText">
