--- a/src/app/sobre-nos/sobre-nos.component.html
+++ b/src/app/sobre-nos/sobre-nos.component.html
@@ -218,11 +218,11 @@
                 <br>
 
                 <footer>
-                  <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/" target="_blank"><img
+                  <a id="aumentaIconsInsta" href="https://www.instagram.com/guhh.rabelo" target="_blank"><img
                       height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
-                  <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories" target="_blank"><img
+                  <a id="aumentaIconsGit " href="https://github.com/guhrabelo" target="_blank"><img
                       src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
-                  <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/" target="_blank"><img
+                  <a id="aumentaIconsLink" href="https://www.linkedin.com/in/gustavorabeloteles" target="_blank"><img
                       height="47px" width="47px" src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
                 </footer>
 
@@ -245,11 +245,11 @@
                 <br>
 
                 <footer>
-                  <a id="aumentaIconsInsta" href="https://www.instagram.com/glicogomes/" target="_blank"><img
+                  <a id="aumentaIconsInsta" href="https://www.instagram.com/felipe_mag/" target="_blank"><img
                       height="47px" width="47px" src="https://i.imgur.com/mxQhjrW.gif" alt=""></a>
-                  <a id="aumentaIconsGit " href="https://github.com/danielagff?tab=repositories" target="_blank"><img
+                  <a id="aumentaIconsGit " href="https://github.com/Luiz-Felipe-Magalhaes" target="_blank"><img
                       src="https://i.imgur.com/rZ6jU33.png" alt=""></a>
-                  <a id="aumentaIconsLink" href="https://www.linkedin.com/in/danielagff/" target="_blank"><img
+                  <a id="aumentaIconsLink" href="https://www.linkedin.com/in/luiz-felipe-magalh%c3%a3es-134421125/" target="_blank"><img
                       height="47px" width="47px" src="https://i.imgur.com/JXSPDzk.gif" alt=""></a>
                 </footer>
               </div>
