--- a/src/app/loja/loja.component.html
+++ b/src/app/loja/loja.component.html
@@ -32,13 +32,13 @@
             <div class="col-9 ml-5 mt-5">
                 <div class="card cardProdutos text-center" *ngFor='let item of listaProdutos'>
                     <div class="card-body">
-                        <a href=""><img src="{{item.imagem}}" alt="" class="imgLivro mt-4" /></a>
+                        <a [routerLink]="['/compra',item.id]"><img src="{{item.imagem}}" alt="" class="imgLivro mt-4" /></a>
                         <h5 class="card-title mt-2 text-left ml-2">{{item.nome}}</h5>
                         <h6 class="card-title mt-2 text-left ml-2">{{item.autor}}</h6>
                         <p class="card-text text-left ml-2">R$ {{item.preco}}</p>
                     </div>
                     <div class="card-footer mt-2">
-                        <a href="#" class="button mb-5">Comprar</a>
+                        <a [routerLink]="['/compra',item.id]" class="button mb-5">Comprar</a>
                     </div>
                 </div>
             </div>
